unpackaged/main/default/objects/ETST_Language_Translation__mdt/ETST_Language_Translation__mdt.object-meta.xml
<CustomObject>
    <label>Language Translation</label>
    <pluralLabel>Language Translations</pluralLabel>
</CustomObject>