unpackaged/main/default/objects/ETST_Language_Translation__mdt/fields/ar_Label__c.field-meta.xml
<CustomField>
    <fullName>ar_Label__c</fullName>
    <label>ar Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>