unpackaged/main/default/objects/ETST_Language_Translation__mdt/fields/en_Label__c.field-meta.xml
<CustomField>
    <fullName>en_Label__c</fullName>
    <label>en Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>