unpackaged/main/default/objects/ETST_Language_Translation__mdt/fields/Service__c.field-meta.xml
<CustomField>
    <fullName>Service__c</fullName>
    <label>Service</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>School Transport</fullName>
                <default>true</default>
                <label>School Transport</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>